--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                         <dt>Dec 2022</dt>
                         <dd>“Award of participant One day Training Level Up Your Confidence And be a Great Public Speaker”</dd>
                         <dd>Bicarapede.academy</dd>
-                        <img src="images/" alt="Gambar" width="170px" height="150px" /></div>
+                        <img src="images/speak.jpg" alt="Gambar" width="170px" height="150px" /></div>
                         <div class="col">
                           <dt>Sep 2021</dt>
                           <dd>“Award of Completed Basic Organization and Leadership Training program as participant”</dd>
