--- a/index.html
+++ b/index.html
@@ -302,13 +302,13 @@
                   <img src="images/Database Programming with SQL.jpg" alt="Gambar" width="170px" height="150px" /></div>
                   <div class="col">
                     <dt>July 2023</dt>
-                    <dd>“AAward of course Completion Introduction to Cybersecurity””</dd>
-                    <dd>Oracle Academy</dd>
+                    <dd>“Award of course Completion Introduction to Cybersecurity””</dd>
+                    <dd>Cisco Networking Academy</dd>
                     <img src="images/Introduction_to_Cybersecurity_Badge.jpg" alt="Gambar" width="170px" height="150px" /></div>
                     <div class="col">
                       <dt>July 2023</dt>
                       <dd>“Award of course Completion Introduction to Internet of Things (IoT) ”</dd>
-                      <dd>Oracle Academy</dd>
+                      <dd>Cisco Networking Academy</dd>
                       <img src="images/Introduction_to_IoT_.jpg" alt="Gambar" width="170px" height="150px" /></div>
                       <div class="col">
                         <dt>Dec 2022</dt>
